index-4 ui match

--- a/index3.html
+++ b/index3.html
@@ -44,7 +44,7 @@
     .text {
         font-size: 14px;
         font-weight: 400;
-        line-height: 135%;
+        line-height: 145%;
         text-align: center;
         color: #4B4B4B;
     }
@@ -58,7 +58,6 @@
         font-weight: 600;
         line-height: 120%;
         text-align: center;
-        padding-top: 50px;
         padding-bottom: 16px;
     }
 
@@ -67,12 +66,11 @@
         font-weight: 600;
         line-height: 120%;
         text-align: center;
-        padding-top: 28px;
-        padding-bottom: 16px;
+        padding-bottom: 15px;
     }
 
     .py-35 {
-        padding-top: 35px;
+        padding-top: 65px;
         padding-bottom: 35px;
     }
 
@@ -81,7 +79,6 @@
         font-weight: 400;
         line-height: 150%;
         text-align: center;
-        max-width: 409px;
         margin: auto;
         color: #4D4D4D;
     }
@@ -106,8 +103,8 @@
     .hero-img {
         width: 252px;
         height: 185px;
-        padding-bottom: 37px;
-        padding-top: 37px;
+        padding-bottom: 34px;
+        padding-top: 34px;
     }
 
     .w-254 {
@@ -119,7 +116,7 @@
     }
 
     .blue-box-padding {
-        padding-top: 50px;
+        padding-top: 52px;
         padding-bottom: 50px;
     }
 
@@ -229,13 +226,13 @@
 
         .blue-box-padding {
             padding-top: 25px;
-            padding-bottom: 25px;
+
         }
 
     }
 </style>
 
-<body style="max-width: 650px; margin: auto;">
+<body style="max-width: 675px; margin: auto;">
     <!---------------welcome to crypto----------------->
     <section style="width: 100%; background-color: #F6F8FF;" class="hero-section-padding py-40">
         <div class="container">
@@ -247,67 +244,65 @@
             </div>
             <div style="text-align: center;">
                 <a href="/">
-                    <img src="https://img.mailinblue.com/8005024/images/content_library/original/66bc4877e9738ca499bb1e5f.png"
-                        alt="hero-section-img" class="hero-img">
+                    <img src="https://i.postimg.cc/NMBsJ0J4/crypto-barcode.png" alt="hero-section-img" class="hero-img">
                 </a>
             </div>
             <div style="width: 100%;text-align: center;">
-                <p style="color: black; line-height: 118%;" class="heading">
-                    Welcome to Crypto Dispensers</p>
+                <h1 style="color: black; max-width: 441px;" class="heading mx-auto">
+                    Add Cash to Your Account Using a Barcode</h1>
             </div>
-            <div style="width: 100%;text-align: center;padding-bottom: 8px;">
+            <div style="width: 100%;text-align: center;padding-bottom: 5px;">
                 <p class="text">
-                    We're excited to see you here.</p>
+                    Take advantage of this offer—add cash to your account and start buying Bitcoin.</p>
             </div>
-            <div class="mx-auto" style="width: 100%;text-align: center; max-width: 406px;">
-                <p class="text hero-text-padding">
-                    Your identity is verified, and you're all set to begin buying and sending Bitcoin with ease.</p>
+            <div class="mx-auto" style="width: 100%;text-align: center; max-width: 497px;">
+                <p class="text">
+                    It’s simple: just visit a store, deposit cash, and your account will be credited with $25, ready for
+                    Bitcoin purchases.</p>
             </div>
-            <div style="width: 100%;text-align: center;">
+            <div style="width: 100%;text-align: center; padding-top: 30px;">
                 <p class="text">
                     Happy Investing!</p>
             </div>
 
         </div>
     </section>
-    <!---------------welcome to crypto----------------->
-    <!--------------unmatched simplicity--------------->
-    <section style="padding: 10px;">
+
+    <!--------------new way to get crypto-------------->
+    <section style="padding-top: 60px;">
         <div class="container">
-            <h2 class="main-heading">Unmatched Simplicity</h2>
-            <p class="main-para">Buying Bitcoin is now easier than ever. We make it simple, secure, and instant with our
-                services.</p>
-            <table class="w-100 four-box mx-auto" style=" padding-bottom: 12px; max-width: 538.96px;">
+            <h2 class="main-heading"> A New Way to Get Crypto on the Go</h2>
+            <p class="main-para" style="max-width: 353px;"> Fund your account with cash at the register of a retail
+                store near you.</p>
+            <table class="w-100 four-box mx-auto" style=" padding-bottom: 12px; max-width: 595px; padding-top: 30px;">
                 <tr class="grid-card">
                     <td class="four-box-padding">
-                        <table class="w-100 w-254"
-                            style=" padding: 10px;border: 1px solid #20A4F326;border-radius: 12px;">
+                        <table class="w-100" style=" padding: 5.5px;border: 1px solid #20A4F326;border-radius: 12px;">
                             <tr>
                                 <td style=" max-width: 46px;">
-                                    <img src="https://img.mailinblue.com/8005023/images/content_library/original/66bb07d85062fc3f10ba48bf.png"
-                                        alt="payments">
+                                    <a href="#"><img style="max-width: 44px; text-align: center;"
+                                            src="https://i.postimg.cc/ncWpB2vp/loction.png" alt="location"></a>
                                 </td>
-                                <td>
+                                <td style="padding-left: 10px;padding-right: 10px;">
                                     <p
                                         style="color: black;font-size: 14px;font-weight: 400;line-height:150%; text-align: left;">
-                                        CDReload Cash Deposit</p>
+                                        Over 16,000 Major Retailers</p>
                                 </td>
                             </tr>
                         </table>
                     </td>
                     <td class="pl-15">
-                        <table class="w-100 w-254"
-                            style=" padding: 10px;border: 1px solid #20A4F326;border-radius: 12px;">
+                        <table class="w-100" style=" padding: 5px;border: 1px solid #20A4F326;border-radius: 12px;">
                             <tr>
                                 <td style=" max-width: 30px;">
-                                    <img src="https://img.mailinblue.com/8005023/images/content_library/original/66bb2de07bddf3142c631a3a.png"
-                                        alt="payments" style="padding-right: 10px;">
+                                    <a href="#"><img style="max-width: 44px; text-align: center;"
+                                            src="https://i.postimg.cc/wjrRGDLk/barcode.png" alt="location"></a>
                                 </td>
                     </td>
-                    <td>
-                        <p style="color: black;font-size: 14px;font-weight: 400;line-height:150%; text-align: left;">
-                            Wire
-                            Transfers</p>
+                    <td style="padding-left: 6px;padding-right: 16px;">
+                        <p
+                            style="color: black;font-size: 14px;font-weight: 400;line-height:150%; text-align: left; padding-left: 20px;">
+                            Add Cash Using a Barcode </p>
                     </td>
                 </tr>
             </table>
@@ -317,33 +312,32 @@
             <table class="w-100 mx-auto" style=" padding-bottom: 12px; max-width: 538.96px;">
                 <tr class="grid-card">
                     <td class="four-box-padding">
-                        <table class="w-100 w-254"
-                            style=" padding: 10px;border: 1px solid #20A4F326;border-radius: 12px;">
+                        <table class="w-100" style=" padding: 5.5px;border: 1px solid #20A4F326;border-radius: 12px;">
                             <tr>
                                 <td style=" max-width: 46px;">
-                                    <img src="https://img.mailinblue.com/8005023/images/content_library/original/66bb2e04dc546db74fdbf8f9.png"
-                                        alt="atm">
+                                    <a href="#"><img style="max-width: 44px; text-align: center;"
+                                            src="https://i.postimg.cc/7hf7tXbw/fund.png" alt="location"></a>
                                 </td>
-                                <td>
+                                <td style="padding-left: 10px;padding-right: 15px;">
                                     <p
                                         style="color: black;font-size: 14px;font-weight: 400;line-height:150%; text-align: left;">
-                                        Debit/Credit/ACHÂ Payments</p>
+                                        Funds Available in Minutes</p>
                                 </td>
                             </tr>
                         </table>
                     </td>
                     <td class="pl-15">
-                        <table class="w-100 w-254"
-                            style=" padding: 10px;border: 1px solid #20A4F326;border-radius: 12px;">
+                        <table class="w-100" style=" padding: 5.5px;border: 1px solid #20A4F326;border-radius: 12px;">
                             <tr>
-                                <td style=" max-width: 30px;">
-                                    <img src="https://img.mailinblue.com/8005023/images/content_library/original/66bb2e2c4c26b2560bbd966c.png"
-                                        alt="wire">
+                                <td style=" max-width: 30px; ">
+                                    <a href="#"><img style="max-width: 44px; text-align: center;"
+                                            src="https://i.postimg.cc/K8XLQPbh/dollor.png" alt="location"></a>
                                 </td>
                     </td>
-                    <td>
-                        <p style="color: black;font-size: 14px;font-weight: 400;line-height:150%; text-align: left;">
-                            Bitcoin ATMs</p>
+                    <td style="padding-left: 14px; padding-right: 41px;">
+                        <p
+                            style="color: black;font-size: 14px;font-weight: 400;line-height:150%; text-align: left; padding-left: 20px;">
+                            Instant Bitcoin Credit</p>
                     </td>
                 </tr>
             </table>
@@ -354,7 +348,7 @@
     </section>
     <!--------------unmatched simplicity--------------->
     <!--------------fund your account------------------>
-    <section style="padding: 10px;">
+    <section style="padding-top: 60px;">
         <div class="container">
             <h2 class="fund-account">Fund Your Account with Cash</h2>
             <p class="main-para" style="max-width: 425px;">BPurchase crypto with cash by funding your account at
