index-5 ui matched

--- a/index.html
+++ b/index.html
@@ -176,8 +176,7 @@
     <section class="footer-section max-width-675 mx-auto">
         <div class="container   footer-padding">
             <div style="text-align: center;">
-                <a href="#"><img style="max-width: 200px;"
-                        src="https://img.mailinblue.com/8005024/images/content_library/original/66bc8ce9cc478eee59a251b6.png"
+                <a href="#"><img style="max-width: 160px;" src="https://i.postimg.cc/7hyQJ5CV/qwert.png"
                         alt="logo" /></a>
             </div>
             <p style=" padding-top: 16px; max-width: 316px;" class="mx-auto text">
