--- a/index4.html
+++ b/index4.html
@@ -351,10 +351,8 @@
     <section style="padding-top: 60px;">
         <div class="container">
             <h2 class="fund-account">Fund Your Account with Cash</h2>
-            <p class="main-para" style="max-width: 425px;">BPurchase crypto with cash by funding your account at
-                thousands of retailers in the U.S
-                including CVS, Winn Dixie, and
-                more!</p>
+            <p class="main-para" style="max-width: 425px;">Purchase crypto with cash by funding your account at
+                thousands of retailers in the U.S including CVS, Winn Dixie, and more!</p>
             <table class="w-100 four-box">
                 <tr class="grid-card">
                     <td class="g-item1 four-box-padding">
@@ -448,8 +446,7 @@
     <section class=" max-width-675 mx-auto py-35">
         <div class="container">
             <div style="text-align: center;">
-                <a href="#"><img style="max-width: 200px;"
-                        src="https://img.mailinblue.com/8005024/images/content_library/original/66bc8ce9cc478eee59a251b6.png"
+                <a href="#"><img style="max-width: 160px;" src="https://i.postimg.cc/7hyQJ5CV/qwert.png"
                         alt="logo" /></a>
             </div>
             <p class="mx-auto text" style=" padding-top: 16px; max-width: 372px; ">
