--- a/index5.html
+++ b/index5.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>crypto-templete</title>
+    <title>index-5</title>
     <style>
         @import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
 
@@ -238,7 +238,7 @@
                     <tr class="grid-card">
                         <td class="g-item1 sm-pr-0  pb-10 " style="  padding-right: 20px;  padding-bottom: 20px;">
                             <div class="text-center "
-                                style=" padding-top: 20px;  padding-left: 15px; padding-right: 15px; padding-bottom: 19px; border: 1px solid #356CE126; border-radius: 12px;">
+                                style=" padding-top: 20px;  padding-left: 15px; padding-right: 15px; padding-bottom: 7px; border: 1px solid #356CE126; border-radius: 12px;">
                                 <img style="max-width: 48px;" src="https://i.postimg.cc/fLrH4WsP/qw.png" alt="image">
                                 <p class="common-card-heading" style="padding-bottom: 10px; padding-top: 19px;">
                                     Download a Wallet App</p>
@@ -247,13 +247,13 @@
                                     Find a Bitcoin Wallet app on iOS or Android, or continue with your existing wallet.
                                 </p>
                                 <p
-                                    style="font-family: Roboto;font-size: 28.82px;font-weight: 700;line-height: 120%;text-align: right; color:#356CE1; padding-bottom: 6px; opacity: 10%;">
+                                    style="font-family: Roboto;font-size: 28.82px;font-weight: 700;line-height: 120%;text-align: right; color:#356CE1; padding-bottom: 6px; opacity: 10%; padding-top: 10px;">
                                     1</p>
                             </div>
                         </td>
                         <td class="g-item2 sm-pr-0 pb-10" style=" padding-right: 20px; padding-bottom: 20px;">
                             <div class="text-center "
-                                style=" padding-top: 20px;  padding-left: 15px; padding-right: 15px; padding-bottom: 19px; border: 1px solid #356CE126; border-radius: 12px;">
+                                style=" padding-top: 20px;  padding-left: 15px; padding-right: 15px; padding-bottom: 7px; border: 1px solid #356CE126; border-radius: 12px;">
                                 <img style="max-width: 48px;" src="https://i.postimg.cc/Y247vhvh/ass.png" alt="image">
                                 <p class="common-card-heading" style=" padding-bottom: 10px; padding-top: 19px;">
                                     Set Up Your Wallet
@@ -265,7 +265,7 @@
                                     up your recovery phrase.
                                 </p>
                                 <p
-                                    style="font-family: Roboto;font-size: 28.82px;font-weight: 700;line-height: 120%;text-align: right; color:#356CE1; padding-bottom: 6px; opacity: 10%;">
+                                    style="font-family: Roboto;font-size: 28.82px;font-weight: 700;line-height: 120%;text-align: right; color:#356CE1; padding-bottom: 6px; opacity: 10%;padding-top: 10px;">
                                     2</p>
                             </div>
                         </td>
@@ -273,7 +273,7 @@
                     <tr class=" grid-card ">
                         <td class="g-item3 sm-pr-0 pb-10" style="padding-right: 20px; padding-bottom: 20px;">
                             <div class="text-center"
-                                style=" padding-top: 20px;  padding-left: 15px; padding-right: 15px; padding-bottom: 19px; border: 1px solid #356CE126; border-radius: 12px;">
+                                style=" padding-top: 20px;  padding-left: 15px; padding-right: 15px; padding-bottom: 7px; border: 1px solid #356CE126; border-radius: 12px;">
                                 <img style="max-width: 48px;" src="https://i.postimg.cc/tCWHzwtb/qq.png" alt="image">
                                 <p class="common-card-heading" style="  padding-bottom: 10px; padding-top: 19px;">
                                     Copy Your Bitcoin Address
@@ -285,13 +285,13 @@
                                     This address is what you will use to receive Bitcoin transactions.
                                 </p>
                                 <p
-                                    style="font-family: Roboto;font-size: 28.82px;font-weight: 700;line-height: 120%;text-align: right; color:#356CE1; padding-bottom: 6px; opacity: 10%;">
+                                    style="font-family: Roboto;font-size: 28.82px;font-weight: 700;line-height: 120%;text-align: right; color:#356CE1; padding-bottom: 6px; padding-top: 10px; opacity: 10%;">
                                     3</p>
                             </div>
                         </td>
                         <td class="g-item4 sm-pr-0 pb-10" style="padding-right: 20px;   padding-bottom: 20px;">
                             <div class="text-center"
-                                style=" padding-top: 20px;  padding-left: 15px; padding-right: 15px; padding-bottom: 19px;  border: 1px solid #356CE126; border-radius: 12px;">
+                                style=" padding-top: 20px;  padding-left: 15px; padding-right: 15px; padding-bottom: 7px;  border: 1px solid #356CE126; border-radius: 12px;">
                                 <img style="max-width: 48px;" src="https://i.postimg.cc/rw9XB4PY/adf.png" alt="image">
                                 <p class="common-card-heading" style="padding-bottom: 10px; padding-top: 19px;">
                                     Add Your Bitcoin Wallet
@@ -302,7 +302,7 @@
                                     access.
                                 </p>
                                 <p
-                                    style="font-family: Roboto;font-size: 28.82px;font-weight: 700;line-height: 120%;text-align: right; color:#356CE126; padding-bottom: 6px;">
+                                    style="font-family: Roboto;font-size: 28.82px;font-weight: 700;line-height: 120%;text-align: right; color:#356CE126; padding-bottom: 6px; padding-top: 10px;">
                                     4</p>
                             </div>
                         </td>
