--- a/index2.html
+++ b/index2.html
@@ -176,8 +176,7 @@
     <section class=" max-width-675 mx-auto py-35  py-sm-25 px-sm-12">
         <div class="container ">
             <div style="text-align: center; ">
-                <a href="#"><img style="max-width: 200px;"
-                        src="https://img.mailinblue.com/8005024/images/content_library/original/66bc8ce9cc478eee59a251b6.png"
+                <a href="#"><img style="max-width: 160px;" src="https://i.postimg.cc/7hyQJ5CV/qwert.png"
                         alt="logo" /></a>
             </div>
             <p class="mx-auto text" style=" padding-top: 16px; max-width: 372px; ">
