--- a/index3.html
+++ b/index3.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>index-3</title>
 </head>
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
@@ -50,7 +50,7 @@
     }
 
     .hero-text-padding {
-        padding-bottom: 30px;
+        padding-bottom: 40px;
     }
 
     .main-heading {
@@ -116,7 +116,7 @@
     }
 
     .blue-box-padding {
-        padding-top: 52px;
+        padding-top: 60px;
         padding-bottom: 50px;
     }
 
@@ -244,21 +244,21 @@
             </div>
             <div style="text-align: center;">
                 <a href="/">
-                    <img src="https://i.postimg.cc/NMBsJ0J4/crypto-barcode.png" alt="hero-section-img" class="hero-img">
+                    <img src="https://img.mailinblue.com/8005024/images/content_library/original/66bc4877e9738ca499bb1e5f.png"
+                        alt="hero-section-img" class="hero-img">
                 </a>
             </div>
             <div style="width: 100%;text-align: center;">
-                <h1 style="color: black; max-width: 441px;" class="heading mx-auto">
-                    Add Cash to Your Account Using a Barcode</h1>
+                <h1 style="color: black;" class="heading mx-auto">
+                    Welcome to Crypto Dispensers</h1>
             </div>
             <div style="width: 100%;text-align: center;padding-bottom: 5px;">
                 <p class="text">
-                    Take advantage of this offer—add cash to your account and start buying Bitcoin.</p>
+                    We're excited to see you here.</p>
             </div>
-            <div class="mx-auto" style="width: 100%;text-align: center; max-width: 497px;">
+            <div class="mx-auto" style="width: 100%;text-align: center; max-width: 406px;">
                 <p class="text">
-                    It’s simple: just visit a store, deposit cash, and your account will be credited with $25, ready for
-                    Bitcoin purchases.</p>
+                    Your identity is verified, and you're all set to begin buying and sending Bitcoin with ease.</p>
             </div>
             <div style="width: 100%;text-align: center; padding-top: 30px;">
                 <p class="text">
@@ -271,9 +271,9 @@
     <!--------------new way to get crypto-------------->
     <section style="padding-top: 60px;">
         <div class="container">
-            <h2 class="main-heading"> A New Way to Get Crypto on the Go</h2>
-            <p class="main-para" style="max-width: 353px;"> Fund your account with cash at the register of a retail
-                store near you.</p>
+            <h2 class="main-heading"> Unmatched Simplicity</h2>
+            <p class="main-para" style="max-width: 409px;"> Buying Bitcoin is now easier than ever. We make it simple,
+                secure, and instant with our services.</p>
             <table class="w-100 four-box mx-auto" style=" padding-bottom: 12px; max-width: 595px; padding-top: 30px;">
                 <tr class="grid-card">
                     <td class="four-box-padding">
@@ -281,12 +281,13 @@
                             <tr>
                                 <td style=" max-width: 46px;">
                                     <a href="#"><img style="max-width: 44px; text-align: center;"
-                                            src="https://i.postimg.cc/ncWpB2vp/loction.png" alt="location"></a>
+                                            src="https://img.mailinblue.com/8005023/images/content_library/original/66bb07d85062fc3f10ba48bf.png"
+                                            alt="location"></a>
                                 </td>
-                                <td style="padding-left: 10px;padding-right: 10px;">
+                                <td style="padding-left: 10px;padding-right: 34px;">
                                     <p
                                         style="color: black;font-size: 14px;font-weight: 400;line-height:150%; text-align: left;">
-                                        Over 16,000 Major Retailers</p>
+                                        CDReload Cash Deposit</p>
                                 </td>
                             </tr>
                         </table>
@@ -296,13 +297,14 @@
                             <tr>
                                 <td style=" max-width: 30px;">
                                     <a href="#"><img style="max-width: 44px; text-align: center;"
-                                            src="https://i.postimg.cc/wjrRGDLk/barcode.png" alt="location"></a>
+                                            src="https://img.mailinblue.com/8005023/images/content_library/original/66bb2de07bddf3142c631a3a.png"
+                                            alt="location"></a>
                                 </td>
                     </td>
-                    <td style="padding-left: 6px;padding-right: 16px;">
+                    <td style="padding-left: 6px;padding-right: 91px;">
                         <p
                             style="color: black;font-size: 14px;font-weight: 400;line-height:150%; text-align: left; padding-left: 20px;">
-                            Add Cash Using a Barcode </p>
+                            Wire Transfers </p>
                     </td>
                 </tr>
             </table>
@@ -316,12 +318,13 @@
                             <tr>
                                 <td style=" max-width: 46px;">
                                     <a href="#"><img style="max-width: 44px; text-align: center;"
-                                            src="https://i.postimg.cc/7hf7tXbw/fund.png" alt="location"></a>
+                                            src="https://img.mailinblue.com/8005023/images/content_library/original/66bb2e04dc546db74fdbf8f9.png"
+                                            alt="location"></a>
                                 </td>
-                                <td style="padding-left: 10px;padding-right: 15px;">
+                                <td style="padding-left: 8px;padding-right: 9px;">
                                     <p
                                         style="color: black;font-size: 14px;font-weight: 400;line-height:150%; text-align: left;">
-                                        Funds Available in Minutes</p>
+                                        Debit/Credit/ACH Payments</p>
                                 </td>
                             </tr>
                         </table>
@@ -331,13 +334,14 @@
                             <tr>
                                 <td style=" max-width: 30px; ">
                                     <a href="#"><img style="max-width: 44px; text-align: center;"
-                                            src="https://i.postimg.cc/K8XLQPbh/dollor.png" alt="location"></a>
+                                            src="https://img.mailinblue.com/8005023/images/content_library/original/66bb2e2c4c26b2560bbd966c.png"
+                                            alt="location"></a>
                                 </td>
                     </td>
-                    <td style="padding-left: 14px; padding-right: 41px;">
+                    <td style="padding-left: 14px; padding-right: 89px;">
                         <p
                             style="color: black;font-size: 14px;font-weight: 400;line-height:150%; text-align: left; padding-left: 20px;">
-                            Instant Bitcoin Credit</p>
+                            Bitcoin ATMs</p>
                     </td>
                 </tr>
             </table>
@@ -351,10 +355,8 @@
     <section style="padding-top: 60px;">
         <div class="container">
             <h2 class="fund-account">Fund Your Account with Cash</h2>
-            <p class="main-para" style="max-width: 425px;">BPurchase crypto with cash by funding your account at
-                thousands of retailers in the U.S
-                including CVS, Winn Dixie, and
-                more!</p>
+            <p class="main-para" style="max-width: 425px;">Purchase crypto with cash by funding your account at
+                thousands of retailers in the U.S including CVS, Winn Dixie, and more!</p>
             <table class="w-100 four-box">
                 <tr class="grid-card">
                     <td class="g-item1 four-box-padding">
@@ -448,8 +450,7 @@
     <section class=" max-width-675 mx-auto py-35">
         <div class="container">
             <div style="text-align: center;">
-                <a href="#"><img style="max-width: 200px;"
-                        src="https://img.mailinblue.com/8005024/images/content_library/original/66bc8ce9cc478eee59a251b6.png"
+                <a href="#"><img style="max-width: 160px;" src="https://i.postimg.cc/7hyQJ5CV/qwert.png"
                         alt="logo" /></a>
             </div>
             <p class="mx-auto text" style=" padding-top: 16px; max-width: 372px; ">
